<resources>
    <string name="app_name">FileManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="musics">Musics</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="recent">Recent</string>
    <string name="documents">Documents</string>
    <string name="items">items</string>
    <string name="item">item</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_storage_ration">FileManager need storage permission to work</string>
    <string name="select">Select</string>
    <string name="select_all">Select All</string>
    <string name="open">Open</string>
    <string name="properties">Properties</string>
    <string name="delete_dialog_title">Are you sure delete?</string>
    <string name="file_properties">File Properties</string>
    <string name="name_label">Name:</string>
    <string name="location_label">Location:</string>
    <string name="type_label">Type:</string>
    <string name="file_size_label">File Size:</string>
    <string name="modified_date_label">Modified Date:</string>
    <string name="folder">Folder</string>
    <string name="new_folder">New Folder</string>
    <string name="new_file">New File</string>
</resources>
